pyk/src/tests/unit/kore/test-data/definitions/pass/test-symbol-5.kore
[]

module TEST-SYMBOL-5

  symbol f{S}(S) : S []

endmodule []
