pyk/src/tests/unit/kore/test-data/definitions/fail/test-exception-5.kore
[]

module TEST-EXCEPTION-5

  axiom{S}
    -X:S []

endmodule []
